; ModuleID = '/home/carl/AnghaBench/systemd/src/nspawn/extr_nspawn.c_have_resolv_conf.c'
source_filename = "/home/carl/AnghaBench/systemd/src/nspawn/extr_nspawn.c_have_resolv_conf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@F_OK = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@ENOENT = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [50 x i8] c"Failed to determine whether '%s' is available: %m\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @have_resolv_conf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @have_resolv_conf(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i32 @assert(i8* %4)
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* @F_OK, align 4
  %8 = call i64 @access(i8* %6, i32 %7)
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %19

10:                                               ; preds = %1
  %11 = load i64, i64* @errno, align 8
  %12 = load i64, i64* @ENOENT, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %20

15:                                               ; preds = %10
  %16 = load i64, i64* @errno, align 8
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 @log_debug_errno(i64 %16, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0), i8* %17)
  store i32 %18, i32* %2, align 4
  br label %20

19:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %20

20:                                               ; preds = %19, %15, %14
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i64 @access(i8*, i32) #1

declare dso_local i32 @log_debug_errno(i64, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
